
Renderers
---------
Removed support for multiple renderers (svg & vml & a11y) for a single widget.
If a widget wants to render differently on different platforms, there must be
branching code inside the widget, or it needs to call a library that branches
based on the browser type (like dojo.gfx or dojo.charting).


Templates
---------
"this." is no longer used within ${} substitution notation.  See ticket #2905.
dojoRoot,buildScriptBase,dojoModuleUrl are no longer supported, but
any JavaScript properties on the widget's 'this' may be referenced with dotted notation.
The attributes dojoOn* are desupported (including dojoOnBuild);
also can't use id attribute to affect a dojoAttachPoint.

Parent/Child relationships
--------------------------
By default widgets exist as islands, not knowing about their parent widget or children widgets.
The exception is the destroy() function which will also delete all descendant widgets.
Some widgets like Tree and SplitContainer will know about their children, but those widgets
will use the special mixins in Container.js / Layout.js. 

Widget.js base class
--------------------

 - Widget.js, Domwidget.js, HtmlWidget.js combined into dijit.base.Widget, with TemplatedWidget mixin
for widgets with templates

 - on widget creation, postMixInProperties(), buildRendering() and postCreate() is called.
 fillInTemplate() is no longer called.  In addition, those functions call signatures have changed.
 No arguments are passed.  To get the source dom Node, just reference this.srcDomNode.
When postCreate() is called the widget children don't yet exist.

 - The TemplatedWidget mixin defines buildRendering().  widgetsInTemplate not ported yet.

 - onResized() removed

 - the whole parent/child relationship thing is gone

 - extraArgs[] is gone

 - postCreate() called but child widgets don't exist yet

 - templateCssPath ignored.   User must manually include tundra.css file
 